[package]
name    = "ecdsa"
version = "0.12.1" # Also update html_root_url in lib.rs when bumping this
description   = """
Signature and elliptic curve types providing interoperable support for the
Elliptic Curve Digital Signature Algorithm (ECDSA)
"""
authors    = ["RustCrypto Developers"]
license    = "Apache-2.0 OR MIT"
repository = "https://github.com/RustCrypto/signatures"
edition    = "2018"
readme     = "README.md"
categories = ["cryptography", "no-std"]
keywords   = ["crypto", "ecc", "nist", "secp256k1", "signature"]

[dependencies]
hmac = { version = "0.11", optional = true, default-features = false }
signature = { version = ">= 1.3.0, < 1.4.0", default-features = false, features = [] }

# optional dependencies
der = { version = "0.4", optional = true }

[dependencies.ff]
version = "0.10"
optional = true
default-features = false
git = "https://github.com/nearcomponents/ff"
rev = "ed510df"
# branch = "0.10.0-no-rand"

[dependencies.elliptic-curve]
version = "0.10.1"
default-features = false
git = "https://github.com/nearcomponents/traits"
rev = "f6c1d86"
# branch = "0.10.5-no-rand"

[dev-dependencies]
hex-literal = "0.3"
sha2 = { version = "0.9", default-features = false }

[dev-dependencies.elliptic-curve]
version = "0.10.1"
default-features = false
features = ["dev"]
git = "https://github.com/nearcomponents/traits"
rev = "f6c1d86"
# branch = "0.10.5-no-rand"

[features]
default = ["digest"]
alloc = []
arithmetic = ["elliptic-curve/arithmetic"]
dev = ["arithmetic", "digest", "elliptic-curve/dev", "hazmat", "zeroize"]
digest = ["signature/digest-preview"]
hazmat = []
pkcs8 = ["elliptic-curve/pkcs8", "der"]
pem = ["elliptic-curve/pem", "pkcs8"]
sign = ["arithmetic", "digest", "hazmat", "hmac", "zeroize"]
std = ["alloc", "elliptic-curve/std", "signature/std"]
verify = ["arithmetic", "digest", "hazmat"]
zeroize = ["elliptic-curve/zeroize"]
rand = ["signature/rand-preview"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
